--- a/index.html
+++ b/index.html
@@ -151,6 +151,82 @@
 </section>
 <!-- End paper abstract -->
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Method. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-three-fourths">
+        <h2 class="title is-2">Method</h2>
+        <div class="image-container">
+          <figure>
+            <img id="gimm" src="static/images/overview.png"> 
+            <figcaption> Pipeline for creation of the proposed EnvSDD dataset.</figcaption>
+          </figure>
+      </div>
+    </div>
+    <!--/ Paper video. -->
+  </div>
+</section>
+
+
+<section class="section">
+  <div class="container">
+    <h2 class="title is-2 has-text-centered">Example Clips</h2>
+
+    <div class="columns is-centered is-vcentered">
+      <div class="column has-text-centered">
+        <h4  class="title is-4">Scenarios</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">Noisy Clips</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">Original Clips</h4>
+      </div>
+    </div>
+    <!-- Individual rows for each scenario -->
+    
+    <!-- Row 1: Morning -->
+    <div class="columns is-centered is-vcentered">
+      <div class="column has-text-centered">
+        <p>Morning</p>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+    </div>
+
+    <!-- Row 2: Pet Care -->
+    <div class="columns is-centered is-vcentered">
+      <div class="column has-text-centered">
+        <p>Pet Care</p>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+    </div>
+
+
+  </div>
+</section>
 
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
