--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a><sup>*</sup>,</span>
+                <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span>
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
