--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h2 class="title is-2">Method</h2>
         <div class="image-container">
           <figure>
-            <img id="gimm" src="static/images/overview.png"> 
+            <img id="gimm" src="static/images/overview_1.png"> 
             <figcaption> Pipeline for creation of the proposed EnvSDD dataset.</figcaption>
           </figure>
       </div>
