--- a/index.html
+++ b/index.html
@@ -175,13 +175,16 @@
 
     <div class="columns is-centered is-vcentered">
       <div class="column has-text-centered">
-        <h4  class="title is-4">Scenarios</h4>
+        <h4  class="title is-4">Dataset|Filename</h4>
       </div>
       <div class="column has-text-centered">
-        <h4  class="title is-4">Noisy Clips</h4>
+        <h4  class="title is-4">Caption</h4>
       </div>
       <div class="column has-text-centered">
-        <h4  class="title is-4">Original Clips</h4>
+        <h4  class="title is-4">Real</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">TTA by AudioLDM</h4>
       </div>
     </div>
     <!-- Individual rows for each scenario -->
@@ -189,7 +192,10 @@
     <!-- Row 1: Morning -->
     <div class="columns is-centered is-vcentered">
       <div class="column has-text-centered">
-        <p>Morning</p>
+        <p>UrbanSound8K|xxx.wav</p>
+      </div>
+      <div class="column has-text-centered">
+        <p>Gun shot.</p>
       </div>
       <div class="column has-text-centered">
         <audio controls>
@@ -208,7 +214,10 @@
     <!-- Row 2: Pet Care -->
     <div class="columns is-centered is-vcentered">
       <div class="column has-text-centered">
-        <p>Pet Care</p>
+        <p>UrbanSound8K|xxx.wav</p>
+      </div>
+      <div class="column has-text-centered">
+        <p>Gun shot.</p>
       </div>
       <div class="column has-text-centered">
         <audio controls>
