--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
     </div>
 
-    <!-- Row 2: Pet Care -->
+<!--     <!-- Row 2: Pet Care -->
     <div class="columns is-centered is-vcentered">
       <div class="column has-text-centered">
         <p>UrbanSound8K|xxx.wav</p>
@@ -232,7 +232,7 @@
         </audio>
       </div>
     </div>
-
+ -->
 
   </div>
 </section>
