--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
       <div class="column has-text-centered">
         <h4  class="title is-4">TTA by AudioLDM</h4>
       </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">TTA by AudioLDM 2</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">TTA by AudioGen</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">TTA by AudioLCM</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">TTA by TangFlux</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">ATA by AudioLDM</h4>
+      </div>
+      <div class="column has-text-centered">
+        <h4  class="title is-4">ATA by AudioLDM 2</h4>
+      </div>
     </div>
     <!-- Individual rows for each scenario -->
     
@@ -196,6 +214,42 @@
       </div>
       <div class="column has-text-centered">
         <p>Gun shot.</p>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="column has-text-centered">
+        <audio controls>
+          <source src="static/audios/morning_noise.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
       </div>
       <div class="column has-text-centered">
         <audio controls>
