--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
     
     <!-- Row 1: Morning -->
     <div class="columns is-centered is-vcentered">
-      <div class="column has-text-centered">
+      <div class="column has-text-centered custom-font-size">
         <p>UrbanSound8K|xxx.wav</p>
       </div>
-      <div class="column has-text-centered">
+      <div class="column has-text-centered custom-font-size">
         <p>Gun shot.</p>
       </div>
       <div class="column has-text-centered">
