--- a/index.html
+++ b/index.html
@@ -210,10 +210,12 @@
     <!-- Row 1: Morning -->
     <div class="columns is-centered is-vcentered">
       <div class="column has-text-centered custom-font-size">
-        <p>UrbanSound8K|xxx.wav</p>
+        <h4  class="title is-4">UrbanSound8K|xxx.wav</h4>
+<!--         <p>UrbanSound8K|xxx.wav</p> -->
       </div>
       <div class="column has-text-centered custom-font-size">
-        <p>Gun shot.</p>
+        <h4  class="title is-4">Gun shot.</h4>
+<!--         <p>Gun shot.</p> -->
       </div>
       <div class="column has-text-centered">
         <audio controls>
