--- a/index.html
+++ b/index.html
@@ -706,6 +706,8 @@
       </div>
     </div>
   </div>
+  
+  <a href="https://info.flagcounter.com/OGAh"><img src="https://s01.flagcounter.com/count2/OGAh/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_12/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </footer>
 
 <!-- Statcounter tracking code -->
