--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
   <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
-      <div class="column is-8">
+      <div class="column is-8" style="text-align: center;">
         <div class="content">
 
           <p>
