--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span>
+                <p> Codes, models and datasets available soon.</p>
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
