--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span>
+<!--                 <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span> -->
+                <p> EnvSDD Organization</p>
                 <p> Codes, models and datasets available soon.</p>
                   </div>
 
