--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               <!-- Paper authors -->
               <span class="author-block">
 <!--                 <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span> -->
-                <p> EnvSDD Organization</p>
-                <p> Codes, models and datasets available soon.</p>
+                <p> Han Yin, Yang Xiao, Rohan Kumar Das, Jisheng Bai, Haohe Liu, Wenwu Wang, Mark D Plumbley </p>
+<!--                 <p> Codes, models and datasets available soon.</p> -->
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
