--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               <span class="author-block">
 <!--                 <a href="https://github.com/EnvSDD" target="_blank">EnvSDD Organization</a></span> -->
                 <p> Han Yin, Yang Xiao, Rohan Kumar Das, Jisheng Bai, Haohe Liu, Wenwu Wang, Mark D Plumbley </p>
+                <a href="https://github.com/apple-yinhan/EnvSDD" target="_blank">Code and Dataset</a>, <a href="https://arxiv.org/abs/2505.19203" target="_blank">Paper on Arxiv</a>
 <!--                 <p> Codes, models and datasets available soon.</p> -->
+                <p> This paper was accepted by Interspeech 2025, looking forward to meet you in Rotterdam, The Netherlands!</p>
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
