--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 <a href="https://github.com/apple-yinhan/EnvSDD" target="_blank">Code and Dataset</a>, <a href="https://arxiv.org/abs/2505.19203" target="_blank">Paper on Arxiv</a>
 <!--                 <p> Codes, models and datasets available soon.</p> -->
                 <p> This paper was accepted by Interspeech 2025, looking forward to meet you in Rotterdam, The Netherlands!</p>
+                <p> Update (2025.07.29): Based on EnvSDD, now we are launching the first Environmental Sound Deepfake Detection (ESDD) Challenge.
+                More details please refer to: <a href="https://sites.google.com/view/esdd-challenge" target="_blank">ESDD 2026</a>! </p>
                   </div>
 
                   <!-- <div class="is-size-5 publication-authors">
