--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!--                 <p> Codes, models and datasets available soon.</p> -->
                 <p> This paper was accepted by Interspeech 2025, looking forward to meet you in Rotterdam, The Netherlands!</p>
                 <hr>
-                <p> Update (2025.07.29): Based on EnvSDD, now we are launching the first Environmental Sound Deepfake Detection (ESDD) Challenge.
+                <p> Update (2025.07.29): Based on EnvSDD, now we are launching the first Environmental Sound Deepfake Detection (ESDD) Challenge with ICASSP 2026!
                 More details please refer to: <a href="https://sites.google.com/view/esdd-challenge" target="_blank">ESDD 2026</a>! </p>
                   </div>
 
